--- a/crates/parser/Cargo.toml
+++ b/crates/parser/Cargo.toml
@@ -6,6 +6,6 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-insta = "1.8.0"
 lexer = { path = "../lexer" }
 ast = { path = "../ast" }
+token = { path = "../token" }
