--- a/crates/cursor/Cargo.toml
+++ b/crates/cursor/Cargo.toml
@@ -1,10 +1,8 @@
 [package]
-name = "css_lexer"
+name = "cursor"
 version = "0.1.0"
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-css_ast = { path = "../css_ast" }
-cursor = { path = "../cursor" }
