--- a/crates/cli/Cargo.toml
+++ b/crates/cli/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
-name = "scanner"
+name = "cli"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+parser = { path = "../parser" }
