--- a/crates/ast/Cargo.toml
+++ b/crates/ast/Cargo.toml
@@ -1,11 +1,13 @@
 [package]
-name = "cli"
+name = "ast"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-parser = { path = "../parser" }
-ast = { path = "../ast" }
-hir = {path = "../hir"}
+syntax = {path = "../syntax"}
+text-size = "1.1.0"
+
+[dev-dependencies]
+parser = {path = "../parser"}
