--- a/crates/hir/Cargo.toml
+++ b/crates/hir/Cargo.toml
@@ -1,11 +1,15 @@
 [package]
-name = "cli"
+name = "hir"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+ast = {path = "../ast"}
+smol_str = "0.1.17"
+syntax = {path = "../syntax"}
+la-arena = "0.2.0"
+
+[dev-dependencies]
 parser = { path = "../parser" }
-ast = { path = "../ast" }
-hir = {path = "../hir"}
