--- a/crates/ast_lowering/Cargo.toml
+++ b/crates/ast_lowering/Cargo.toml
@@ -1,12 +1,15 @@
 [package]
-name = "cli"
+name = "ast_lowering"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-parser = { path = "../parser" }
 ast = { path = "../ast" }
-ast_validation = { path = "../ast_validation" }
-hir = {path = "../hir"}
+hir = { path = "../hir" }
+syntax = { path = "../syntax" }
+la-arena = "0.2.0"
+
+[dev-dependencies]
+parser = { path = "../parser" }
