--- a/crates/codegen_js/Cargo.toml
+++ b/crates/codegen_js/Cargo.toml
@@ -1,14 +1,10 @@
 [package]
-name = "cli"
+name = "codegen_js"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-parser = { path = "../parser" }
-ast = { path = "../ast" }
+hir = { path = "../hir" }
 ast_lowering = { path = "../ast_lowering" }
-ast_validation = { path = "../ast_validation" }
-hir = {path = "../hir"}
-codegen_js = {path = "../codegen_js"}
