--- a/fuzz/Cargo.toml
+++ b/fuzz/Cargo.toml
@@ -14,6 +14,8 @@ path = "fuzz_targets/main.rs"
 
 [dependencies]
 libfuzzer-sys = "0.3"
-ast = {path = "../crates/ast"}
-hir = {path = "../crates/hir"}
-parser = {path = "../crates/parser"}
+ast = { path = "../crates/ast" }
+ast_validation = { path = "../crates/ast_validation" }
+ast_lowering = { path = "../crates/ast_lowering" }
+hir = { path = "../crates/hir" }
+parser = { path = "../crates/parser" }
