--- a/crates/syntax_tree/Cargo.toml
+++ b/crates/syntax_tree/Cargo.toml
@@ -1,10 +1,8 @@
 [package]
-name = "syntax"
+name = "syntax_tree"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-lexer = {path = "../lexer"}
-rowan = "0.14.1"
